FIX - overflow

--- a/front/styles/diary.module.scss
+++ b/front/styles/diary.module.scss
@@ -38,21 +38,7 @@
   width: 256px;
   height: 156px;
   background: url(../images/diary/group.svg);
-  margin: 0 auto;
+  margin: 0 auto 24px;
   transform: translateX(-28.5px);
-}
-
-.bottom_text{
-  font-family: Noto Sans KR;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.15px;
-  color: #181818;
-  text-decoration-line: underline;
-  text-underline-position: under;
-  margin: 24px;
 }
 
